# Sallar

./: .gitignore  Anchor.toml  README.md  package.json  rust-toolchain.toml
programs/sallar/: Cargo.toml
programs/sallar/src/: account.rs  context.rs  error.rs  lib.rs  token_math.rs  utils.rs
programs/solana-contracts/: Cargo.toml
programs/solana-contracts/src/: account.rs  context.rs  error.rs  lib.rs  token_math.rs  utils.rs
scripts/: Dockerfile  run-anchor-tests.sh  run-docker-container.sh
tests/: 01_initial_token_distribution.ts  02_top_block.ts  03_bottom_block.ts  04_ final_staking.ts  05_final_mining.ts  06_change_authority.ts
tests/basic/: 01_initial_token_distribution.ts  02_top_block.ts  03_bottom_block.ts  04_ final_staking.ts  05_final_mining.ts  06_change_authority.ts
tests/user-rest/: 01_initialize.ts  02_top_block.ts  03_bottom_block.ts
tests/utils/: accounts.ts  pda.ts
