[package]
name = "sallar"
version = "0.1.0"
description = "Sallar SPL Token on Solana network"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "sallar"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []

[dependencies]
anchor-lang = "0.25.0"
anchor-spl = "0.25.0"

[dev-dependencies]
csv = "1.1.6"
rand = "0.8.5"

[profile.release]
overflow-checks = true
lto = "fat"
codegen-units = 1
[profile.release.build-override]
opt-level = 3
incremental = false
codegen-units = 1